# Computer-Graphics-Cse-461

./: README.md
OpenGL/: README.md
OpenGL/OpenGLAssignment/: CMakeLists.txt  README.md
OpenGL/OpenGLAssignment/include/: Camera.h  Input.h  Light.h  Mesh.h  Model.h  Object.h  Shader.h  World.h
OpenGL/OpenGLAssignment/resources/models/: cottage_obj.mtl
OpenGL/OpenGLAssignment/shaders/: phong.frag  phong.vert
OpenGL/OpenGLAssignment/src/: Camera.cpp  Input.cpp  Mesh.cpp  Model.cpp  Object.cpp  Shader.cpp  World.cpp  main.cpp
RayTracer/: README.md
RayTracer/PA1/: RunStep.txt
RayTracer/PA1/cghw1/: Makefile  main.cpp  parser.cpp  parser.hpp  raytracer.cpp  raytracer.hpp
RayTracer/PA1/cghw1/examplexml/: example.xml  test1.xml  test2.xml  test3.xml
